[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    {path = "ipmap/data/templates/map.html"},
    {path = "ipmap/data/settings.json"}
]
name = "ipmap"
version = "1.2.0"
description = "A cross-platform easy-to-use ip geolocation & mapping tool."
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/rly0nheart/ipmap"
repository = "https://github.com/rly0nheart/ipmap"
keywords = ["mapping", "geolocation", "ip-address-geolocation", "ip-address-lookup", "ip-mapping"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.9"
rich = "*"

[tool.poetry.scripts]
ipmap = "ipmap.main:run"
